<resources>
    <string name="app_name">SampleApp</string>
    <string name="eda_date_time_text">Eda DateTime lib: %s</string>
    <string name="limit_text">Limit:</string>
    <string name="count_of_saved_seconds_text">Count of saved seconds:</string>

    <!-- TextView -->
    <string name="counter_text">%02d:%02d:%02d</string>
    <string name="date_time_text"><u>Date &amp; Time:</u></string>
    <string name="counter_with_data_binding"><u>Counter With DataBinding:</u></string>
    <string name="counter_with_view_binding"><u>Counter With ViewBinding:</u></string>
    <string name="set_limit_text">Set count of seconds to be saved</string>

    <!-- Button Text -->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="load_all">Load All</string>
    <string name="remove_all">Remove All</string>
    <string name="configure">Configure</string>
    <string name="no_limit">No Limit</string>
    <string name="counter_page_button_text">Counter Page</string>
    <string name="payment_page_button_text">Payment Page</string>
    <string name="postal_codes_page_button_text">Postal Codes Page</string>
    <string name="random_users_page_button_text">Random Users Page</string>
    <string name="button_get_users">GET USERS</string>

    <!-- AlertDialog -->
    <string name="alert_title">ALERT</string>
    <string name="counter_activity_reset_button_exceeding_limit_message">You cannot record any more seconds because of exceeding limit!</string>
    <string name="counter_activity_load_button_exceeding_limit_message">You cannot record any more seconds because of exceeding limit!</string>
    <string name="counter_activity_load_button_exceeding_limit_positive_button">Save and Load</string>
    <string name="counter_activity_load_button_exceeding_limit_negative_button">Load without Save</string>
    <string name="remove_all_counter_title">Remove All Alert</string>
    <string name="remove_all_counter_message">Are you sure to remove all the saved seconds?</string>

    <!-- Hint -->
    <string name="edit_text_count_hint">Input user count:</string>

    <!-- Prompt && Messages -->
    <string name="problem_occurred_prompt">Problem occurred</string>
    <string name="invalid_count_value_prompt">Invalid count value</string>
    <string name="value_must_be_positive_prompt">Value must be positive</string>
    <string name="invalid_value_message">Invalid Value</string>
    <string name="positive_message">Value must be positive</string>
    <string name="io_problem_message">IO problem occurred</string>

    <!-- Picture -->
    <string name="user_picture_content_description">Picture of a user</string>

    <!-- Common -->


</resources>