<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.edaakyil.android.kotlin.app.sample.LimitConfigurationActivity"/>

        <variable name="activity" type="LimitConfigurationActivity"/>
        <variable name="limitValue" type="String"/>
        <variable name="flag" type="boolean"/>
    </data>

    <LinearLayout
        android:id="@+id/limitConfigurationActivityMainLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="48dp"
        tools:context=".LimitConfigurationActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/set_limit_text"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/plus"
                android:textStyle="bold"
                android:enabled="@{flag}"
                android:onClick="@{_ -> activity.onIncreaseButtonClicked()}"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="2"
                android:backgroundTint="#F0E5E5"
                android:cursorVisible="false"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:text="@={limitValue}"
                android:onClick="@{_ -> activity.onEditTextClicked()}"/>

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/minus"
                android:textStyle="bold"
                android:enabled="@{flag}"
                android:onClick="@{_ -> activity.onDecreaseButtonClicked()}"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/save"
                android:onClick="@{_ -> activity.onSaveButtonClicked()}"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/no_limit"
                android:onClick="@{_ -> activity.onNoLimitButtonClicked()}"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:onClick="@{_ -> activity.onCloseButtonClicked()}"/>

        </LinearLayout>

    </LinearLayout>
</layout>