<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.edaakyil.android.kotlin.app.sample.CounterActivity"/>
        <import type="android.widget.ArrayAdapter"/>

        <variable name="activity" type="CounterActivity"/>
        <variable name="adapter" type="ArrayAdapter&lt;String&gt;"/>
        <variable name="startStopButtonText" type="String"/>
        <variable name="dateTimeText" type="String"/>
        <variable name="counterText" type="String"/>
        <variable name="count" type="String"/>
        <variable name="limit" type="String"/>
    </data>

    <LinearLayout
        android:id="@+id/counterActivityMainLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="32dp"
        tools:context=".CounterActivity">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:text="@string/date_time_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{dateTimeText}" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:text="@string/counter_with_data_binding"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{counterText}"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:text="@string/counter_with_view_binding"/>

            <TextView
                android:id="@+id/counterActivityTextViewCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"

                android:text="@string/configure"
                android:onClick="@{_ -> activity.onConfigureButtonClicked()}"/>

            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@{startStopButtonText}"
                android:onClick="@{_ -> activity.onStartStopButtonClicked()}"/>

            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/reset"
                android:onClick="@{_ -> activity.onResetButtonClicked()}"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textStyle="bold"
                android:text="@string/limit_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@{limit}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textStyle="bold"
                android:text="@string/count_of_saved_seconds_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{count}"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="4dp">

            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/load_all"
                android:onClick="@{_ -> activity.onLoadAllButtonClicked()}"/>

            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/remove_all"
                android:onClick="@{_ -> activity.onRemoveAllButtonClicked()}"/>

        </LinearLayout>

        <Button
            android:id="@+id/counterActivityLoadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            android:text="@string/load"
            android:onClick="@{_ -> activity.onLoadButtonClicked()}"/>

        <ListView
            android:id="@+id/counterActivityListViewSeconds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#FFCC00"
            android:dividerHeight="2dp"
            android:adapter="@{adapter}"
            android:choiceMode="singleChoice"/>

    </LinearLayout>
</layout>